WIP adding basic install tests
also clarified README

--- a/conda_env_pymc3_vs_pystan.yml
+++ b/conda_env_pymc3_vs_pystan.yml
@@ -11,7 +11,10 @@ dependencies:
 - scikit-learn
 - seaborn
 - patsy
+- statsmodels
 - requests
 - pip
 - pip:
     - regex
+    - Cython
+    - pystan
